# mcpguard

./: .gitignore  .goreleaser.yaml  Cargo.toml  README.md  go.mod
.github/workflows/: ci.yaml  ci.yml
cmd/mcpguard/: audit.go  audit_test.go  explain.go  explain_test.go  hook.go  hook_test.go  main.go
configs/: discord.yaml  telegram.yaml
internal/audit/: audit.go  audit_test.go
internal/compress/: compress.go  compress_test.go
internal/config/: config.go  config_test.go
internal/proxy/: proxy.go  proxy_test.go
internal/scan/: engine.go  engine_test.go  extract.go  patterns.go  report.go
src/: audit.rs  compress.rs  config.rs  main.rs  proxy.rs
src/cli/: audit.rs  explain.rs  hook.rs  mod.rs
src/scan/: engine.rs  extract.rs  mod.rs  patterns.rs  report.rs
